Implemented PSR-4 namespacing and moved api routes into api folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Ignore live config file which will contain sensitive security information
-public_html/config.inc.php
+# Ignore environment config file
+.env
 
 # Ignore log files but not the logs folder
 logs/*
@@ -9,3 +9,6 @@ logs/*
 public_html/phDump/*
 
 test.php
+
+# Ignore composer package folder
+vendor
