--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,7 @@
     "name": "martinjoiner/circa",
     "type": "private",
     "require": {
-        "vlucas/phpdotenv": "^2.4",
-        "phpunit/phpunit": "^6.4"
+        "vlucas/phpdotenv": "^2.4"
     },
     "license": "no-license",
     "authors": [
@@ -16,5 +15,8 @@
         "psr-4": {
             "App\\": "app/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^6.4"
     }
 }
